# lib/db/src/schema/index.ts
@@ -10,3 +10,4 @@ export * from "./questionnaires";
 export * from "./consultations";
 export * from "./config";
 export * from "./reminderRules";
+export * from "./emailLogs";
